Implements upload-fast endpoint
